--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next-images": "^1.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-icons": "^10.18.0"
   },
   "devDependencies": {
     "@types/node": "^14.6.1",
